syntax = "proto3";

option go_package = "github.com/in4it/roxprox/proto/notification";

service Notification {
   rpc SendNotification(NotificationRequest) returns (NotificationReply) {}
}

message NotificationRequest {
   message NotificationItem {
      string filename = 1;
      string eventName = 2;
   }  
   repeated NotificationItem notificationItem = 1;
}

message NotificationReply {
    bool result = 1;
}
